# src/app/Http/Resources/V1/UserProfileResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources\V1;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UserProfileResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'first_name'=>$this->first_name,
+            'last_name'=>$this->last_name,
+            'mobile'=>$this->mobile,
+            'pic'=>$this->pic,
+            'score'=>$this->score,
+        ];
+    }
+}
